--- a/style.css
+++ b/style.css
@@ -79,15 +79,15 @@ button:hover {
 
 #menuPanel {
   position: fixed;
-  top: 15px;
-  left: 15px;
-  width: 250px;
-  height: 250px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: none;
   background: rgba(0,0,0,0.95);
   border: 2px solid #0ff;
-  border-radius: 10px;
   z-index: 1500;
+  border-radius: 0;
 }
 
 #settingsPanel {
@@ -145,7 +145,7 @@ button:hover {
     font-size: 1.8em;
   }
   #menuPanel {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   }
 }
